# b3_geo

./: .gitignore  README.md  pyproject.toml  pytest.ini
examples/: blade_test.yml  blend_naca.py  ex1.py
src/b3_geo/: __init__.py  models.py
src/b3_geo/api/: __init__.py  af.py  af_step.py  loft.py  loft_step.py  planform.py
src/b3_geo/cli/: __init__.py  af.py  clean.py  loft.py  planform.py
src/b3_geo/core/: blade.py
src/b3_geo/utils/: __init__.py  cache.py  interpolation.py  plotting.py
tests/: test_af.py  test_af_step.py  test_blade.py  test_cache.py  test_cli_af.py  test_cli_clean.py  test_cli_loft.py  test_cli_main.py  test_cli_planform.py  test_examples.py  test_interpolation.py  test_loft.py  test_loft_step.py  test_planform.py  test_plotting.py
