[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b3-geo"
version = "0.1.0"
description = "Blade geometry module for b3m"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyvista",
    "pydantic",
    "pyyaml",
    "rich-click",
    "rich",
]

[project.scripts]
b3-geo = "b3_geo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
