[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b3-geo"
version = "0.1.0"
description = "Blade geometry module for b3m"
authors = [{name = "wr1", email = "8971152+wr1@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyvista",
    "pydantic>=2.0,<3.0",
    "pyyaml",
    "treeparse",
    "rich",
    "pytest",
    "pytest-cov",
    "statesman @ git+https://github.com/wr1/statesman.git",
]

[project.scripts]
b3-geo = "b3_geo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
