[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b3-geo"
version = "0.1.0"
description = "Blade geometry generation"
authors = [{name = "Your Name"}]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pydantic",
    "pyvista",
    "pyyaml",
    "rich",
    "treeparse",
    "statesman",
]

[project.scripts]
b3-geo = "b3_geo.cli:main"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "S104", "COM812", "ISC001"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "mkdocs",
    "mkdocs-material",
]
